# News-Aggregator

./: .gitignore  Dockerfile.data  Makefile  README.md  check_mongo.js  check_researcher.sh  command.txt  docker-compose.sharding.yml  docker-compose.yml  generate_data.py  mongo_command.txt  run.sh  script.sh  seed_api.sh  test_vk_req.sh
backups/: Dockerfile
backups/scripts/: backup-master.sh  backup-replica.sh  crontab.config
client/website/: Dockerfile  index.html  nginx.conf  search-results.html
config/: researchers.xml  researchers_fixed.xml  researchers_fixed_ru.xml
data-generator/: Dockerfile  data_generator.go  go.mod
database/: docker-compose.yml
db/: Dockerfile  cassandra_schema.cql  init-mongo-replica.sh  init-mongo-sharded.js  init-replica.sh  init.sql  mongo-admin-init.js  mongo-advanced.js  mongo-init-replica-set.js  mongo-init.js  mongo-keyfile  pg_hba.conf  redis_structure.txt  timescale_post_events.sql  tmp.sql
monitor/: mango.sh
researchers/: README.md
researchers/reddit/: Dockerfile  access_data  go.mod  main.go  test_conf.xml  token_cache.json
researchers/test/: go.mod  main.go
researchers/vk/: Dockerfile  access_token  (+3 more)
scripts/: init-sharding.sh
server/: CMakeLists.txt  Dockerfile  Makefile  full_code.txt
server-go/: Dockerfile  go.mod  go.sum
server/src/: main.cpp
server/src/PgPool/: PgPool.cpp  PgPool.h
server/src/handlers/: handlers.cpp  handlers.h
server/src/models/: Constants.cpp  Constants.h  Types.h
server/src/mongo/: MongoManager.cpp  MongoManager.h
server/src/utils/: CacheManager.cpp  CacheManager.h
(+34 files in other folders)
